# polecen

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: lib.yml  rust.yml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/standard-framework/: Cargo.toml
examples/standard-framework/src/: main.rs
polecen/: Cargo.toml  build.rs
polecen-macros/: Cargo.toml
polecen-macros/src/: input.rs  lib.rs  utils.rs
polecen/src/: arguments.rs  command.rs  lib.rs  macros.rs  prelude.rs
polecen/src/arguments/: default.rs  mod.rs  parse.rs  prelude.rs  split.rs
