[package]
name = "polecen-macros"
version = "0.1.0"
authors = ["Unoqwy <julien.qwy@gmail.com>"]
edition = "2018"
description = "Procedural macros to generate polecen structures and parsers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Unoqwy/polecen"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
syn = { version = "1.0.72", features = ["full"] }
quote = "1.0.9"
convert_case = "0.4.0"
