[package]
name = "polecen"
version = "0.1.0"
authors = ["Unoqwy <julien.qwy@gmail.com>"]
edition = "2018"
description = "Command arguments parser for Serenity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Unoqwy/polecen"

[dependencies]
polecen-macros = { path = "../polecen-macros", optional = true }

serde = "1.0"
serde_json = "1.0"

fancy-regex = { version = "0.5", optional = true }
lazy_static = { version = "1", optional = true }

async-trait = "0.1"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "model", "unstable_discord_api"]

[features]
default = ["serenity_rustls", "polecen_default"]

polecen_default = ["macros", "patterns"]
macros = ["polecen-macros"]
patterns = ["fancy-regex", "lazy_static"]

# Serenity backend
serenity_rustls = ["serenity/rustls_backend"]
serenity_native_tls = ["serenity/native_tls_backend"]
serenity_tokio_0_2 = ["serenity/rustls_tokio_0_2_backend"]
serenity_native_tls_tokio_0_2 = ["serenity/native_tls_tokio_0_2_backend"]
