[package]
name = "polecen"
version = "0.1.1"
authors = ["Unoqwy <julien.qwy@gmail.com>"]
edition = "2018"
description = "Command arguments parser for Serenity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Unoqwy/polecen"
build = "build.rs"

[dependencies]
polecen-macros = { path = "../polecen-macros", optional = true }

serde = "1.0"

fancy-regex = { version = "0.5", optional = true }
lazy_static = { version = "1", optional = true }

async-trait = "0.1"
humantime = { version = "2.0", optional = true }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "model", "unstable_discord_api"]

[features]
default = ["serenity_rustls", "polecen_default"]

polecen_default = ["macros", "patterns", "default_parsers"]
macros = ["polecen-macros"]
patterns = ["fancy-regex", "lazy_static"]

default_parsers = ["default_parsers_primitives", "default_parsers_models", "default_parsers_time"]

# Implement default argument parsers for primitives
default_parsers_primitives = []
# Implement default argument parsers for serenity models
# Not all models are subject to be read as an argument, so not all models are implemented.
default_parsers_models = ["serenity/cache"]
# Use humantime to parse Duration and time.
default_parsers_time = ["humantime"]

# Serenity backend
serenity_rustls = ["serenity/rustls_backend"]
serenity_native_tls = ["serenity/native_tls_backend"]
serenity_tokio_0_2 = ["serenity/rustls_tokio_0_2_backend"]
serenity_native_tls_tokio_0_2 = ["serenity/native_tls_tokio_0_2_backend"]

[build-dependencies]
cfg_aliases = "0.1"
