[package]
name = "polecen-basic-example"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.10.5"
default-features = false
features = ["client", "gateway", "model"]

[dependencies.polecen]
path = "../../polecen"
default-features = false
features = ["serenity_native_tls", "polecen_default"]
